aws_minecraft_server_ec2.tf
# Define variables
variable "minecraft_server_url" {
  default = "https://piston-data.mojang.com/v1/objects/84194a2f286ef7c14ed7ce0090dba59902951553/server.jar"
}

variable "java_version" {
  default = "17"
  description = "Java version"
}

variable "memory_size" {
  default = "1300M"
  description = "Server Memory Size"
}

# IAM Instance Profile
resource "aws_iam_instance_profile" "instance_profile" {
  name = "minecraft-server-instance-profile"

  roles = [
    aws_iam_role.minecraft-server-role.name
  ]
}

# IAM Role (assuming you have imported the role elsewhere)
data "aws_iam_role" "minecraft-server-role" {
  name = "minecraft-server-role"
}

# EC2 Instance
resource "aws_instance" "minecraft_instance" {
  ami           = "ami-0ad215c298e692194"
  instance_type = "t4g.small"

  iam_instance_profile = aws_iam_instance_profile.instance_profile.name

  network_interface {
    device_index         = 0
    associate_public_ip  = true
    subnet_id            = var.minecraft_server_public_subnet_id
    security_groups      = [var.minecraft_server_ec2_security_group_id]
  }

  user_data = <<-EOF
    #!/bin/bash

    sudo dnf install -y java-${var.java_version}-amazon-corretto-headless
    sudo adduser minecraft
    sudo mkdir /opt/minecraft/
    sudo mkdir /opt/minecraft/server/
    cd /opt/minecraft/server

    sudo wget ${var.minecraft_server_url}

    sudo chown -R minecraft:minecraft /opt/minecraft/
    sudo java -Xmx1300M -Xms1300M -jar server.jar nogui
    sleep 40
    sed -i 's/false/true/p' eula.txt
    touch start
    printf '#!/bin/bash\njava -Xmx${var.memory_size} -Xms${var.memory_size} -jar server.jar nogui\n' | sudo tee -a start
    sudo chmod +x start
    sleep 1
    sudo touch stop
    printf '#!/bin/bash\nkill -9 $(ps -ef | pgrep -f "java")' | sudo tee -a stop
    sudo chmod +x stop
    sleep 1

    cd /etc/systemd/system/
    sudo touch minecraft.service
    printf '[Unit]\nDescription=Minecraft Server on start up\nWants=network-online.target\n[Service]\nUser=minecraft\nWorkingDirectory=/opt/minecraft/server\nExecStart=/opt/minecraft/server/start\nStandardInput=null\n[Install]\nWantedBy=multi-user.target' | sudo tee -a minecraft.service
    sudo systemctl daemon-reload
    sudo systemctl enable minecraft.service
    sudo systemctl start minecraft.service
    EOF

  tags = {
    Name = "minecraft-server-instance"
  }
}

# Replace variables with actual values for subnet and security group IDs
variable "minecraft_server_public_subnet_id" {
  description = "ID of the subnet where the Minecraft server will be deployed"
}

variable "minecraft_server_ec2_security_group_id" {
  description = "ID of the security group for the Minecraft server EC2 instance"
}
